kong-ingress-controller-multi-service/common-public/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-admin-api
  namespace: kong-multi
spec:
  hostnames:
  - gateway-api-admin-api.tajawal.io
  parentRefs:
    - name: kong-gateway-common-teams
      namespace: public-gateway-http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-multi-gateway-admin
          port: 8001

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-manager
  namespace: kong-multi
spec:
  hostnames:
  - gateway-api-manager.tajawal.io
  parentRefs:
    - name:  kong-gateway-common-teams
      namespace: public-gateway-http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-multi-gateway-manager
          port: 8002
